# slab

./: .gitignore  Dockerfile  LICENSE  README.md  default.nix  example.pug  fourmolu.yaml  index.html  language-pug.cabal  pughs.cabal  reference.html  shell.nix  slab.cabal  tutorial.html
.github/workflows/: deployment.yml
content/: index.pug  index.slab  recipe-scss.slab  reference.slab  tutorial.slab
content/layout/: page.slab
css/: struct.css
data/: content.txt  values.json
docs/: CNAME
examples/: a.golden  a.html  a.slab  ab-abc.golden  ab.golden  ab.slab  abc.html  abc.pug  arguments.html  arguments.slab  attrs.golden  attrs.html  attrs.pug  attrs.slab  basic.golden  basic.pug  blargs.html  blargs.slab  blocks.html  blocks.pug  body.html  body.pug  body.slab  code.html  code.pug  code.slab  comments.html  comments.pug  comments.slab  div.html  div.slab  dot.html  dot.slab  each.html  each.pug  each.slab  el.html  el.slab  elems.golden  elems.slab  (+67 more)
examples/cases/: basic.golden  blanks.html  blockquote.html  nesting.html  nesting.slab  pre.html  quotes.html  single-period.html  source.html  source.pug  source.slab
examples/docs/: aux-imported.html  aux-imported.slab  basic-attr.html  basic-attr.slab  basic-class.html  basic-class.slab  basic-comments.html  basic-comments.slab  basic-div.html  basic-div.slab  basic-id.html  basic-id.slab  basic.html  expr-json.slab  expr.html  expr.slab  exprs-strings.html  exprs-strings.slab  exprs.html  exprs.slab  flow-for.html  flow-for.slab  flow-if.html  flow-if.slab  frag.html  frag.slab  fragments-arguments.html  fragments-arguments.slab  fragments-default.html  fragments-default.slab  fragments-short.html  fragments-short.slab  fragments.slab  interpolation.html  interpolation.slab  landing.html  landing.slab  mod-import.html  mod-import.slab  mod-include-filter.html  (+4 more)
nix/: contents.nix  overlay.nix  overlays.nix  sources.json
nix/23.05/nix/: sources.json
nix/23.11/nix/: sources.json
nix/24.05/nix/: sources.json
nix/24.11/nix/: sources.json
nix/25.05/nix/: sources.json
scripts/: build-ci.sh  build.sh  format.sh  ghci-examples.sh  ghci.about.txt  ghci.conf  ghci.sh  serve-haddock.sh
src/Pughs/: Build.hs  Command.hs  Evaluate.hs  Inline.hs  Parse.hs  Render.hs  Run.hs  Syntax.hs
src/Slab/: Build.hs  Command.hs  Error.hs  Evaluate.hs  Execute.hs  Parse.hs  PreProcess.hs  Render.hs  Report.hs  Run.hs  Serve.hs  Syntax.hs  Watch.hs
src/Slab/Generate/: Haskell.hs
static/css/: struct.css
tests/: Paths_slab.hs  run-examples.hs
tests/Pughs/: GHCi.hs  Runner.hs
tests/Slab/: GHCi.hs  Runner.hs
