cabal-version:      2.2
name:               language-pug
version:            0.1.0.0
category:           web

common common-extensions
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeApplications
    TypeOperators

common common-options
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-unused-do-bind
    +RTS -A256m -n4m -qg -RTS

-- Generating version bounds can be done with
--     nix-shell --run 'cabal freeze'
common common-dependencies
  build-depends:
      base >=4.7 && <5
    , optparse-applicative
    , protolude

library
  import: common-extensions, common-options, common-dependencies
  hs-source-dirs: src
  build-depends:
      blaze-html
    , blaze-markup
    , blaze-svg
    , containers
    , directory
    , filepath
    , megaparsec
    , pretty-simple
    , text
    , transformers
  exposed-modules:
    Pughs.Command
    Pughs.Parse
    Pughs.Render
    Pughs.Run
    Pughs.Syntax

executable pughs
  import: common-extensions, common-options, common-dependencies
  main-is: pughs.hs
  hs-source-dirs: bin
  build-depends:
    language-pug
  ghc-options:
    -threaded

test-suite pughs-examples
  import: common-extensions, common-options, common-dependencies
  build-depends:
    , hspec
    , language-pug
    , filepath
    , Glob
    , lens
    , pretty-simple
    , QuickCheck
    , tasty
    , tasty-silver
    , text
  other-modules:
    Pughs.Runner
  type: exitcode-stdio-1.0
  main-is: run-examples.hs
  hs-source-dirs:
      tests
